--- a/index.html
+++ b/index.html
@@ -10,4 +10,16 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
+
+  <main>
+
+
+    <div>
+        <p> CAFECITO </p>
+        <br>
+    </div>
+
+</main>
+
+
 </html>
